fixed button spacing

--- a/Level 1/Task 1/styles.css
+++ b/Level 1/Task 1/styles.css
@@ -105,10 +105,10 @@ nav .wrapper{
   font-size: 30px;
   font-weight: 700;
   padding: 10px 20px;
+  margin-right: 4%;
   text-align: center;
   cursor:pointer;
   box-shadow: 0px 6px rgb(46, 5, 15);
-  margin:2%;
 }
 
 .explore_btn:active{
